--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <title>Rhythm Doctor Custom Levels</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./bundle.css">
 </head>
 <body>
