--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./bundle.css">
 </head>
 <body>
-  <div id="app" class="antialiased text-gray-900 bg-gray-600 font-sans">
+  <div id="app" class="h-full antialiased text-gray-900 bg-gray-600 font-sans">
     <!-- This div appears while loading.-->
     <div v-if="state=='LOADING'" id="loading_state">
       <p>Loading..</p>
@@ -16,7 +16,7 @@
     <!-- This div appears when loaded. -->
     <div v-if="state=='LOADED'" id="loaded_state">
 
-      <header class='bg-gray-800'>
+      <header class='fixed top-0 w-full bg-gray-800 z-10'>
         <!-- top part -->
         <div class='flex justify-between items-center px-3 py-2'>
           <!-- search bar -->
@@ -80,7 +80,7 @@
             <span class='ml-3'>Sort by </span>
             <div class="relative flex items-center">
               <select class='appearance-none bg-gray-400 rounded-lg font-semibold ml-1 pr-5 text-gray-800' v-model="sort_by">
-                <option value="score">relevance</option>
+                <option value="score" :hidden="searchQuery == ''">relevance</option>
                 <option value="last_updated">publish date</option>
                 <option value="song">title</option>
                 <option value="difficulty">difficulty</option>
@@ -109,7 +109,7 @@
 
       <!-- CARDS DISPLAY -->
       <div v-show="display_type == 'cards'" id="levels-cards" 
-      class="w-full justify-center mx-auto flex flex-row flex-wrap items-stretch md:px-8 lg:px-16">
+      class="pt-16 w-full justify-center mx-auto flex flex-row flex-wrap items-stretch md:px-8 lg:px-16">
         <!-- each card starts here -->
         <article 
         v-for="(level,index) in truncated"
@@ -170,7 +170,7 @@
                   <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="syringe" class="svg-inline--fa fa-syringe fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path fill="currentColor" d="M201.5 174.8l55.7 55.8c3.1 3.1 3.1 8.2 0 11.3l-11.3 11.3a8.03 8.03 0 0 1-11.3 0l-55.7-55.8-45.3 45.3 55.8 55.8c3.1 3.1 3.1 8.2 0 11.3l-11.3 11.3a8.03 8.03 0 0 1-11.3 0L111 265.2l-26.4 26.4a79.9 79.9 0 0 0-23 65.4l7.1 63.6L2.3 487a8.03 8.03 0 0 0 0 11.3l11.3 11.3c3.1 3.1 8.2 3.1 11.3 0l66.3-66.3 63.6 7.1c23.9 2.6 47.9-5.4 65.4-23l181.9-181.9-135.7-135.7-64.9 65zm308.2-93.3L430.5 2.3a8.03 8.03 0 0 0-11.3 0l-11.3 11.3a8.03 8.03 0 0 0 0 11.3l28.3 28.3-45.3 45.3-56.6-56.6-17-17a8.03 8.03 0 0 0-11.3 0l-33.9 33.9a8.03 8.03 0 0 0 0 11.3l17 17L424.8 223l17 17c3.1 3.1 8.2 3.1 11.3 0l33.9-34c3.1-3.1 3.1-8.2 0-11.3l-73.5-73.5 45.3-45.3 28.3 28.3c3.1 3.1 8.2 3.1 11.3 0l11.3-11.3c3.1-3.2 3.1-8.2 0-11.4z"/>
                   </svg>
-                  <p class="ml-1">{{level.difficulty}}
+                  <p class="ml-1">{{getDifficultyText(level.difficulty)}}
                   </p>
                 </div>
                 <div class="flex items-center text-gray-700 text-xs">
