--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </svg>
             </a></li>
             <li class='inline-block flex items-center'><a class='px-2 hover:cursor-default' href="#">
-              {{currentPage}} of {{numberOfPages}}
+              {{currentPage+1}} of {{numberOfPages}}
             </a></li>
             <li class='inline-block flex items-center'><a class='px-2 hover:cursor-pointer hover:text-white' v-on:click="switchPage(currentPage+1)">
                 <svg class='h-4 w-4 fill-current' aria-hidden="true" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
@@ -80,7 +80,7 @@
             <span class='ml-3'>Sort by </span>
             <div class="relative flex items-center">
               <select class='appearance-none bg-gray-400 rounded-lg font-semibold ml-1 pr-5 text-gray-800' v-model="sort_by">
-                <option value="score" :hidden="searchQuery == ''">relevance</option>
+                <option value="score" :hidden="!relevanceAllowed">relevance</option>
                 <option value="last_updated">publish date</option>
                 <option value="song">title</option>
                 <option value="difficulty">difficulty</option>
@@ -163,15 +163,22 @@
                     <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="pencil-alt" class="svg-inline--fa fa-pencil-alt fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                       <path fill="currentColor" d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1a47.92 47.92 0 0 1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"/>
                     </svg>
-                  <p class="ml-1 break-all">{{level.author}}
-                  </p>
+                  <a
+                  class="ml-1 break-all hover:underline hover:text-gray-900 hover:cursor-pointer"
+                  v-on:click="addToSearch(level.author)"
+                  >{{level.author}}
+                  </a>
                 </div>
                 <div class="flex items-center text-gray-700 text-xs">
                   <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="syringe" class="svg-inline--fa fa-syringe fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path fill="currentColor" d="M201.5 174.8l55.7 55.8c3.1 3.1 3.1 8.2 0 11.3l-11.3 11.3a8.03 8.03 0 0 1-11.3 0l-55.7-55.8-45.3 45.3 55.8 55.8c3.1 3.1 3.1 8.2 0 11.3l-11.3 11.3a8.03 8.03 0 0 1-11.3 0L111 265.2l-26.4 26.4a79.9 79.9 0 0 0-23 65.4l7.1 63.6L2.3 487a8.03 8.03 0 0 0 0 11.3l11.3 11.3c3.1 3.1 8.2 3.1 11.3 0l66.3-66.3 63.6 7.1c23.9 2.6 47.9-5.4 65.4-23l181.9-181.9-135.7-135.7-64.9 65zm308.2-93.3L430.5 2.3a8.03 8.03 0 0 0-11.3 0l-11.3 11.3a8.03 8.03 0 0 0 0 11.3l28.3 28.3-45.3 45.3-56.6-56.6-17-17a8.03 8.03 0 0 0-11.3 0l-33.9 33.9a8.03 8.03 0 0 0 0 11.3l17 17L424.8 223l17 17c3.1 3.1 8.2 3.1 11.3 0l33.9-34c3.1-3.1 3.1-8.2 0-11.3l-73.5-73.5 45.3-45.3 28.3 28.3c3.1 3.1 8.2 3.1 11.3 0l11.3-11.3c3.1-3.2 3.1-8.2 0-11.4z"/>
                   </svg>
-                  <p class="ml-1">{{getDifficultyText(level.difficulty)}}
-                  </p>
+                  <a 
+                  class="ml-1 hover:underline hover:text-gray-900 hover:cursor-pointer"
+                  v-on:click="addDifficultyToSearch(level.difficulty)"
+                  >
+                  {{getDifficultyText(level.difficulty)}}
+                  </a>
                 </div>
                 <div class="flex items-center text-gray-700 text-xs">
                   <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="heartbeat" class="svg-inline--fa fa-heartbeat fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -206,7 +213,11 @@
               <!-- tags -->
               <span 
               v-for="tag in level.tags" 
-              class="inline-block max-w-full truncate bg-gray-300 rounded-full px-3 text-xs font-semibold text-gray-600"
+              class="inline-block max-w-full truncate 
+              bg-gray-300 rounded-full px-3 text-xs font-semibold text-gray-600
+              hover:bg-gray-400 hover:text-gray-700 hover:cursor-pointer
+              "
+              v-on:click="addTagToSearch(tag)"
               >
               {{tag}}
               </span>
