--- a/index.html
+++ b/index.html
@@ -154,14 +154,18 @@
               <!-- icons + metadata -->
               <div class="flex flex-wrap gap gap-x-3 mt-1">
                 <div class="flex items-center text-gray-700 text-xs max-w-full">
-                    <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="pencil-alt" class="svg-inline--fa fa-pencil-alt fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                      <path fill="currentColor" d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1a47.92 47.92 0 0 1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"/>
-                    </svg>
-                  <a
-                  class="ml-1 break-all hover:underline hover:text-gray-900 hover:cursor-pointer"
-                  v-on:click="addToSearch(level.author)"
-                  >{{level.author}}
-                  </a>
+                  <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="pencil-alt" class="svg-inline--fa fa-pencil-alt fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1a47.92 47.92 0 0 1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"/>
+                  </svg>
+                  <ul>
+                    <li class="inline-block" v-for="(author, i) in level.author">
+                    <a
+                    class="inline-block ml-1 break-all hover:underline hover:text-gray-900 hover:cursor-pointer"
+                    v-on:click="addToSearch(author)"
+                    >{{author}}
+                    </a>{{getSeperator(i, level.author.length)}}
+                    </li>
+                  </ul>
                 </div>
                 <div class="flex items-center text-gray-700 text-xs">
                   <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="syringe" class="svg-inline--fa fa-syringe fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
