--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./bundle.css">
 </head>
 <body>
-  <div id="app" class="h-full antialiased text-gray-900 bg-gray-600 font-sans">
+  <div id="app" class="min-h-screen antialiased text-gray-900 bg-gray-600 font-sans">
     <!-- This div appears while loading.-->
     <div v-if="state=='LOADING'" id="loading_state">
       <p>Loading..</p>
@@ -22,7 +22,7 @@
           <!-- search bar -->
           <div class='flex-grow'>
             <input v-model='searchQuery'
-            class='w-full rounded text-lg text-semibold py-1 px-2' type='search'>
+            class='bg-gray-400 w-full rounded text-lg text-semibold py-1 px-2' type='search'>
           </div>
           <!-- pagination shows up at the top on ipadish sizes -->
           <pagination class="hidden sm:flex ml-4"
@@ -30,7 +30,7 @@
           v-bind:number-of-pages='numberOfPages'
           v-on:page-change='switchPage'></pagination>
           <!-- hamburger icon -->
-          <div class='ml-20 sm:ml-4 flex items-center'>
+          <div class='ml-12 sm:ml-4 flex items-center'>
             <button v-on:click="trayOpen = !trayOpen" class="text-gray-400 hover:text-white">
               <svg class="h-8 w-8 fill-current" aria-hidden="true" data-prefix="fas" data-icon="bars" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                 <path v-if="!trayOpen" fill="currentColor" d="M16 132h416a16 16 0 0 0 16-16V76a16 16 0 0 0-16-16H16A16 16 0 0 0 0 76v40a16 16 0 0 0 16 16zm0 160h416a16 16 0 0 0 16-16v-40a16 16 0 0 0-16-16H16a16 16 0 0 0-16 16v40a16 16 0 0 0 16 16zm0 160h416a16 16 0 0 0 16-16v-40a16 16 0 0 0-16-16H16a16 16 0 0 0-16 16v40a16 16 0 0 0 16 16z"/>
@@ -128,12 +128,12 @@
               </div>
               <!-- download + copy link buttons -->
               <div class="flex-none w-8 ml-2 flex flex-col">
-                <a :data-clipboard-text="level.download_url" class="copy-link text-white border border-white rounded-lg hover:bg-gray-600 hover:cursor-pointer">
+                <a :data-clipboard-text="level.download_url" class="copy-link text-white border border-white rounded-lg hover:bg-purple-500 hover:cursor-pointer">
                   <svg class="h-full w-full p-2 fill-current" aria-hidden="true" data-prefix="fas" data-icon="copy" class="svg-inline--fa fa-copy fa-w-14" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path fill="currentColor" d="M320 448v40a24 24 0 0 1-24 24H24a24 24 0 0 1-24-24V120a24 24 0 0 1 24-24h72v296c0 30.88 25.12 56 56 56h168zm0-344V0H152a24 24 0 0 0-24 24v368a24 24 0 0 0 24 24h272a24 24 0 0 0 24-24V128H344c-13.2 0-24-10.8-24-24zm120.97-31.03L375.03 7.03A24 24 0 0 0 358.06 0H352v96h96v-6.06a24 24 0 0 0-7.03-16.97z"/>
                   </svg>
                 </a>
-                <a :href="level.download_url" class="mt-4 text-white border border-white rounded-lg hover:bg-gray-600">
+                <a :href="level.download_url" class="mt-4 text-white border border-white rounded-lg hover:bg-purple-500">
                   <svg class="h-full w-full p-2 fill-current" aria-hidden="true" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49a51.24 51.24 0 0 0 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"/>
                   </svg>
