--- a/index.html
+++ b/index.html
@@ -225,8 +225,82 @@
         </div>
       </article> <!-- end card display -->
 
-      <div v-show="display_type == 'list'" id="levels-list">
+      <div v-show="display_type == 'list'" id="levels-list"
+      class='pt-16'
+      >
         <p>Hi i'm the list display i guess</p>
+        <table>
+          <tr v-for="level in truncated">
+            <td> <!-- IMAGE -->
+              <div class="relative pb-9/16 w-32 bg-gray-700 rounded overflow-hidden">
+                <img class="absolute object-contain" :src="level.preview_img"/>
+              </div>
+            </td>
+            <td> <!-- SONG TITLE + ARTIST -->
+              <div>
+                <h1 class="font-semibold">{{level.song}}</h1>
+                <h2>{{level.artist}}</h2>
+              </div>
+            </td>
+            <td> <!-- CREATOR -->
+              <ul>
+                  <li class="inline-block" v-for="(author, i) in level.author">
+                  <a
+                  class="inline-block ml-1 break-all hover:underline hover:text-gray-900 hover:cursor-pointer"
+                  v-on:click="addToSearch(author)"
+                  >{{author}}
+                  </a>{{getSeperator(i, level.author.length)}}
+                  </li>
+                </ul>
+            </td>
+            <td> <!-- DIFFICULTY -->
+              <p>{{getDifficultyText(level.difficulty)}}</p>
+            </td>
+            <td> <!-- PUBLISH DATE -->
+              <p>{{niceDateFormatted(level.last_updated)}}</p>
+            </td>
+            <td> <!-- PLAYERS -->
+              <p>{{playerFormatted(level.single_player, level.two_player)}}</p>
+            </td>
+            <td> <!-- BPM -->
+              <p>{{getBPMText(level.min_bpm, level.max_bpm)}}</p>
+            </td>
+            <td v-html="convertToHtml(level.description)"> <!-- DESCRIPTION -->
+              
+            </td>
+            <td> <!-- TAGS -->
+              <div class="flex flex-wrap items-end mt-2 relative h-auto gap gap-2">
+                  <!-- epilepsy warning / starred -->
+                  <div v-show="level.seizure_warning" class="flex items-center bg-orange-200 rounded-full px-3 text-xs font-semibold">
+                    <svg class="h-3 w-3 fill-current text-orange-400" aria-hidden="true" data-prefix="fas" data-icon="exclamation-triangle" class="svg-inline--fa fa-exclamation-triangle fa-w-18" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                      <path fill="currentColor" d="M569.52 440.01c18.46 32-4.71 71.99-41.58 71.99H48.05c-36.93 0-60-40.05-41.57-71.99L246.42 24c18.47-32.01 64.72-31.96 83.16 0L569.52 440zM288 354a46 46 0 1 0 0 92 46 46 0 0 0 0-92zm-43.67-165.35l7.41 136A12 12 0 0 0 263.74 336h48.54a12 12 0 0 0 11.98-11.35l7.42-136A12 12 0 0 0 319.7 176h-63.38a12 12 0 0 0-11.98 12.65z"/>
+                    </svg>
+                    <span class="inline-block ml-1 text-orange-500">
+                      Seizure warning
+                    </span>
+                  </div>
+                  <div v-show="level.starred" class="flex items-baseline bg-teal-200 rounded-full px-3 text-xs font-semibold">
+                      <svg class="h-3 w-3 fill-current text-teal-400" aria-hidden="true" data-prefix="fas" data-icon="stars" class="svg-inline--fa fa-stars fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path fill="currentColor" d="M336 160l26.7-53.3L416 80l-53.3-26.7L336 0l-26.7 53.3L256 80l53.3 26.7L336 160zm144 32l-16-32-16 32-32 16 32 16 16 32 16-32 32-16-32-16zm-115.7 75.3L259.5 252l-46.9-95.2c-8.4-17-32.7-17.2-41.2 0L124.5 252 19.7 267.3C.9 270-6.7 293.2 7 306.5l75.9 74-18 104.6c-3.2 18.9 16.7 33.1 33.3 24.2l93.8-49.4 93.8 49.4c16.7 8.8 36.5-5.3 33.3-24.2l-17.9-104.6 75.9-74c13.6-13.3 6-36.5-12.8-39.2z"/>
+                      </svg>
+                      <span class="inline-block ml-1 text-teal-500">
+                        Starred
+                      </span>
+                    </div>
+                  <!-- tags -->
+                  <span 
+                  v-for="tag in level.tags" 
+                  class="inline-block max-w-full truncate 
+                  bg-gray-300 rounded-full px-3 text-xs font-semibold text-gray-600
+                  hover:bg-gray-400 hover:text-gray-700 hover:cursor-pointer
+                  "
+                  v-on:click="addTagToSearch(tag)"
+                  >
+                  {{tag}}
+                  </span>
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
 
