--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
             </svg>
             <span class="ml-3">Display as <a v-on:click='switchType' class='hover:cursor-pointer font-bold text-purple-300 hover:text-white'>{{display_type}}</a></span>
           </div>
+          <!-- show/hide special links -->
+          <div class='mt-3 flex items-center text-gray-400 font-semibold'>
+            <svg class="w-5 h-5 fill-current" aria-hidden="true" data-prefix="fas" data-icon="grip-horizontal" class="svg-inline--fa fa-grip-horizontal fa-w-14" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <path fill="currentColor" d="M544 96H416V32c0-17.7-14.3-32-32-32H192c-17.7 0-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32v368c0 8.8 7.2 16 16 16h544c8.8 0 16-7.2 16-16V128c0-17.7-14.3-32-32-32zM160 436c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm0-128c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm160 128c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm0-128c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm16-170c0 3.3-2.7 6-6 6h-26v26c0 3.3-2.7 6-6 6h-20c-3.3 0-6-2.7-6-6v-26h-26c-3.3 0-6-2.7-6-6v-20c0-3.3 2.7-6 6-6h26V86c0-3.3 2.7-6 6-6h20c3.3 0 6 2.7 6 6v26h26c3.3 0 6 2.7 6 6v20zm144 298c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm0-128c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40z"/>            </svg>
+            <span class="ml-3"><a v-on:click='showAutoImportLinks = !showAutoImportLinks' class='hover:cursor-pointer font-bold text-purple-300 hover:text-white'>{{showAutoImportLinks ? 'Show' : 'Don\'t show'}}</a> the autoimport links</span>
+          </div>
         </div>
       </header>
 
@@ -126,7 +132,7 @@
               <div class="flex-initial w-full text-white text-sm overflow-y-auto break-words"
               v-html="convertToHtml(level.description)">
               </div>
-              <!-- download + copy link buttons -->
+              <!-- download + copy link + autoimport buttons -->
               <div class="flex-none w-8 ml-2 flex flex-col">
                 <a :data-clipboard-text="level.download_url" class="copy-link text-white border border-white rounded-lg hover:bg-purple-500 hover:cursor-pointer">
                   <svg class="h-full w-full p-2 fill-current" aria-hidden="true" data-prefix="fas" data-icon="copy" class="svg-inline--fa fa-copy fa-w-14" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -136,6 +142,11 @@
                 <a :href="level.download_url" class="mt-4 text-white border border-white rounded-lg hover:bg-purple-500">
                   <svg class="h-full w-full p-2 fill-current" aria-hidden="true" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49a51.24 51.24 0 0 0 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"/>
+                  </svg>
+                </a>
+                <a v-show="showAutoImportLinks" :href="getAutoimportLink(level.download_url)" class="mt-4 text-white border border-white rounded-lg hover:bg-purple-500">
+                  <svg class="h-full w-full p-2 fill-current" aria-hidden="true" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M201.5 174.8l55.7 55.8c3.1 3.1 3.1 8.2 0 11.3l-11.3 11.3a8.03 8.03 0 0 1-11.3 0l-55.7-55.8-45.3 45.3 55.8 55.8c3.1 3.1 3.1 8.2 0 11.3l-11.3 11.3a8.03 8.03 0 0 1-11.3 0L111 265.2l-26.4 26.4a79.9 79.9 0 0 0-23 65.4l7.1 63.6L2.3 487a8.03 8.03 0 0 0 0 11.3l11.3 11.3c3.1 3.1 8.2 3.1 11.3 0l66.3-66.3 63.6 7.1c23.9 2.6 47.9-5.4 65.4-23l181.9-181.9-135.7-135.7-64.9 65zm308.2-93.3L430.5 2.3a8.03 8.03 0 0 0-11.3 0l-11.3 11.3a8.03 8.03 0 0 0 0 11.3l28.3 28.3-45.3 45.3-56.6-56.6-17-17a8.03 8.03 0 0 0-11.3 0l-33.9 33.9a8.03 8.03 0 0 0 0 11.3l17 17L424.8 223l17 17c3.1 3.1 8.2 3.1 11.3 0l33.9-34c3.1-3.1 3.1-8.2 0-11.3l-73.5-73.5 45.3-45.3 28.3 28.3c3.1 3.1 8.2 3.1 11.3 0l11.3-11.3c3.1-3.2 3.1-8.2 0-11.4z"/>
                   </svg>
                 </a>
               </div>
@@ -168,8 +179,8 @@
                   </ul>
                 </div>
                 <div class="flex items-center text-gray-700 text-xs">
-                  <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="syringe" class="svg-inline--fa fa-syringe fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path fill="currentColor" d="M201.5 174.8l55.7 55.8c3.1 3.1 3.1 8.2 0 11.3l-11.3 11.3a8.03 8.03 0 0 1-11.3 0l-55.7-55.8-45.3 45.3 55.8 55.8c3.1 3.1 3.1 8.2 0 11.3l-11.3 11.3a8.03 8.03 0 0 1-11.3 0L111 265.2l-26.4 26.4a79.9 79.9 0 0 0-23 65.4l7.1 63.6L2.3 487a8.03 8.03 0 0 0 0 11.3l11.3 11.3c3.1 3.1 8.2 3.1 11.3 0l66.3-66.3 63.6 7.1c23.9 2.6 47.9-5.4 65.4-23l181.9-181.9-135.7-135.7-64.9 65zm308.2-93.3L430.5 2.3a8.03 8.03 0 0 0-11.3 0l-11.3 11.3a8.03 8.03 0 0 0 0 11.3l28.3 28.3-45.3 45.3-56.6-56.6-17-17a8.03 8.03 0 0 0-11.3 0l-33.9 33.9a8.03 8.03 0 0 0 0 11.3l17 17L424.8 223l17 17c3.1 3.1 8.2 3.1 11.3 0l33.9-34c3.1-3.1 3.1-8.2 0-11.3l-73.5-73.5 45.3-45.3 28.3 28.3c3.1 3.1 8.2 3.1 11.3 0l11.3-11.3c3.1-3.2 3.1-8.2 0-11.4z"/>
+                  <svg class="h-3 w-4 fill-current" aria-hidden="true" data-prefix="fas" data-icon="syringe" class="svg-inline--fa fa-syringe fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M555.3 300.1L424.2 112.8a114.36 114.36 0 00-159.3-28.1 113.91 113.91 0 00-41.5 53.8C220.5 79.2 172 32 112 32 50.1 32 0 82.1 0 144v224c0 61.9 50.1 112 112 112s112-50.1 112-112V218.9c3.3 8.6 7.3 17.1 12.8 25L368 431.2c22.2 31.8 57.7 48.8 93.8 48.8 22.7 0 45.5-6.7 65.5-20.7 51.7-36.2 64.2-107.5 28-159.2zM160 256H64V144a48.01 48.01 0 0196 0v112zm194.8 44.9l-65.6-93.7c-7.7-11-10.7-24.4-8.3-37.6 2.3-13.2 9.7-24.8 20.7-32.5 8.5-6 18.5-9.1 28.8-9.1 16.5 0 31.9 8 41.3 21.5l65.6 93.7-82.5 57.7z"/>
                   </svg>
                   <a 
                   class="ml-1 hover:underline hover:text-gray-900 hover:cursor-pointer"
