--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <span class='ml-3'>Sort by </span>
             <div class="relative flex items-center">
               <select class='appearance-none bg-gray-400 rounded-lg font-semibold ml-1 pr-5 text-gray-800' v-model="sort_by">
-                <option value="score" :hidden="!relevanceAllowed">relevance</option>
+                <option value="score" :hidden="sortState !== 'relevance'">relevance</option>
+                <option value="sampler" :hidden="sortState !== 'sampler'">sampler</option>
                 <option value="last_updated">publish date</option>
                 <option value="song">title</option>
                 <option value="difficulty">difficulty</option>
@@ -107,10 +108,20 @@
         </div>
       </header>
 
+      <div class="pt-20 md:px-8 lg:px-16 inline-block">
+        <ul v-show="currentPage == 0 && params.testing" class="flex flex-row gap gap-x-8 text-sm text-black mx-2 px-4 py-2 rounded bg-indigo-200 opacity-50 w-auto">
+          <li class="ml-0">Not sure which levels to play? <a v-on:click="fireSamplerQuery()" class="underline hover:no-underline hover:text-indigo-900 hover:cursor-pointer">Try a sampler pack!</a></li>
+          <li>Visit <a class="underline hover:no-underline hover:text-indigo-900" href="https://discord.gg/rhythmdr">the Discord server</a> to add a level</li>
+          <li><a class="underline hover:no-underline hover:text-indigo-900" href="https://twitter.com/RhythmDrGame">@RhythmDrGame</a> on Twitter</li>
+        </ul>
+      </div>
+
       <!-- CARDS DISPLAY -->
       <div v-show="display_type == 'cards'" id="levels-cards" 
-      class="pt-16 w-full justify-center mx-auto flex flex-row flex-wrap items-stretch md:px-8 lg:px-16">
+      class="pt-6 w-full justify-center mx-auto flex flex-row flex-wrap items-stretch md:px-8 lg:px-16">
         <!-- each card starts here -->
+              <!-- ticker -->
+
         <article 
         v-for="(level,index) in truncated"
         class="flex-1 flex flex-col 
