tweaked the blurb

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <!-- sidebar -->
         <div v-show="boostersOpen && params.testing" class="min-h-screen pt-16 px-4 flex-shrink-0 bg-gray-800 text-gray-400 w-72 hidden md:block">
-          <p class="text-sm text-justify">Not sure which levels to play? Try a booster pack! Booster Packs are hand-selected packs of levels.</p>
+          <p class="text-sm text-justify">Not sure which levels to play? Grab a booster pack! Each pack contains randomized sets of carefully curated levels.</p>
           <!-- loading -->
           <p v-show="boosters.length === 0">Loading...</p>
           <!-- <p v-show="boosters.length !== 0">{{boosters}}</p> -->
