--- a/index.html
+++ b/index.html
@@ -256,6 +256,12 @@
                       <p class="ml-1">{{getBPMText(level.min_bpm, level.max_bpm)}} BPM
                       </p>
                     </div>
+                    <div v-show="level.verified" class="flex items-center text-green-600 text-xs">
+                      <svg class="h-3 w-3 fill-current" aria-hidden="true" data-prefix="fas" data-icon="check" class="svg-inline--fa fa-check fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <title>Approved: a trusted member of the community has checked for correct BPM/offset, metadata, and cues to ensure playability.</title>
+                        <path fill="currentColor" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"/>
+                      </svg>
+                    </div>
                   </div>
                 </div>
                 
@@ -271,12 +277,12 @@
                       Seizure warning
                     </span>
                   </div>
-                  <div v-show="level.verified" class="flex items-baseline bg-teal-200 rounded-full px-3 text-xs font-semibold">
-                      <svg class="h-3 w-3 fill-current text-teal-500" aria-hidden="true" data-prefix="fas" data-icon="check-square" class="svg-inline--fa fa-check-square fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 -50 1650 1650">
-                        <path fill="currentColor" d="M813 1299l614-614q19-19 19-45t-19-45l-102-102q-19-19-45-19t-45 19l-467 467-211-211q-19-19-45-19t-45 19l-102 102q-19 19-19 45t19 45l358 358q19 19 45 19t45-19zm851-883v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960q119 0 203.5 84.5t84.5 203.5z"/>
+                  <div v-show="level.starred" class="flex items-baseline bg-teal-200 rounded-full px-3 text-xs font-semibold">
+                      <svg class="h-3 w-3 fill-current text-teal-500" aria-hidden="true" data-prefix="fas" data-icon="check-square" class="svg-inline--fa fa-check-square fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                        <path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"/>
                       </svg>
                       <span class="inline-block ml-1 text-teal-500">
-                        Approved
+                        Starred
                       </span>
                     </div>
                   <!-- tags -->
