changed to suggestion by donte

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <!-- This div appears in an error. -->
     <div v-if="state=='ERROR'" id="error_state">
       <p>Error when loading the Rhythm Doctor API!</p>
-      <p>Try disabling any privacy related extensions in your browser, as they do not play nice with this site.</p>
+      <p>if you have any privacy related extensions for your browser, try disabling them, this site uses a google sheet as the backend.</p>
       <p>If that fails, ping or message auburnsummer#1863 on discord!</p>
       <p>{{error}}</p>
     </div>
