--- a/index.html
+++ b/index.html
@@ -173,10 +173,11 @@
 
             <article 
             v-for="(level,index) in truncated"
-            class="flex-1 flex flex-col 
+            class="flex-1 flex flex-col v-show="level.verified"
                 min-w-72 max-w-sm m-2
                 bg-gray-200 
                 rounded-lg shadow-md hover:shadow-xl transition-shadow
+                   
                 group">
 
               <!-- image -->
