--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="app" class="min-h-screen antialiased text-gray-900 bg-gray-600 font-sans">
     <!-- This div appears while loading.-->
     <div v-if="state=='LOADING'" id="loading_state">
-      <p>Loading.. also dps was here</p>
+      <p>Loading.. also dps was here 3</p>
     </div>
 
     <!-- This div appears when loaded. -->
@@ -173,7 +173,7 @@
 
             <article 
             v-for="(level,index) in truncated"
-            class="flex-1 flex flex-col show="level.verified"
+            class="flex-1 flex flex-col
                 min-w-72 max-w-sm m-2
                 bg-gray-200 
                 rounded-lg shadow-md hover:shadow-xl transition-shadow
