oops should have removed that earlier

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="app" class="min-h-screen antialiased text-gray-900 bg-gray-600 font-sans">
     <!-- This div appears while loading.-->
     <div v-if="state=='LOADING'" id="loading_state">
-      <p>Loading.. also dps was here 4</p>
+      <p>Loading...</p>
     </div>
 
     <!-- This div appears when loaded. -->
