add wiki to top bar. starting the SEO war with fandom

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
               <li>Are you a streamer? Try the <a class="underline hover:no-underline hover:text-indigo-900" href="https://docs.google.com/spreadsheets/d/1acZltH8MKs81Nu-BOsaupeWfjJVDiDVoVzbIKepPdYQ/edit#gid=0">RD Streamer Setlist</a>!</li>
               <li><a class="underline hover:no-underline hover:text-indigo-900" href="https://rhythm-doctor.gitbook.io/level-editor/">Level Editor tutorial</a> by Klyzx et al</li>
               <li>Visit <a class="underline hover:no-underline hover:text-indigo-900" href="https://discord.gg/rhythmdr">the Discord server</a> to add a level</li>
+              <li><a class="underline hover:no-underline hover:text-indigo-900" href="https://wiki.rhythm.cafe">Rhythm Doctor Wiki</a></li>
             </ul>
           </div>
 
