--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
           <div class="pt-20 px-8 inline-block">
             <ul v-show="currentPage == 0" class="flex flex-row gap gap-x-8 text-sm text-black mx-2 px-4 py-2 rounded bg-indigo-200 opacity-50 w-auto">
-              <li>Want some longer-lasting level lists? Check out the <a class="underline hover:no-underline hover:text-indigo-900" href="https://docs.google.com/spreadsheets/d/1acZltH8MKs81Nu-BOsaupeWfjJVDiDVoVzbIKepPdYQ/edit?usp=sharing">RDL Setlists</a>!</li>
+              <li>Looking for a curated list of levels? Check out the <a class="underline hover:no-underline hover:text-indigo-900" href="https://docs.google.com/spreadsheets/d/1acZltH8MKs81Nu-BOsaupeWfjJVDiDVoVzbIKepPdYQ/edit?usp=sharing">RDL Setlists</a>!</li>
               <li><a class="underline hover:no-underline hover:text-indigo-900" href="https://rhythm-doctor.gitbook.io/level-editor/">Level Editor tutorial</a> by Klyzx et al</li>
               <li>Visit <a class="underline hover:no-underline hover:text-indigo-900" href="https://discord.gg/rhythmdr">the Discord server</a> to add a level</li>
               <li><a class="underline hover:no-underline hover:text-indigo-900" href="https://wiki.rhythm.cafe">Rhythm Doctor Wiki</a></li>
