--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
           <div class="pt-4 px-8 inline-block">
             <ul v-show="currentPage == 0" class="flex flex-row gap gap-x-8 text-sm text-black mx-2 px-4 py-2 rounded bg-indigo-200 opacity-50 w-auto">
-              <li><span class="font-bold">Notice:</span> On the 25th April 2022, this page will redirect to <a class="underline hover:no-underline hover:text-indigo-900" href="https://rhythm.cafe">rhythm.cafe</a>. Please look at the #rd-editor pins for more information.</li>
+              <li>I'm working on a new site which will support Steam Workshop levels! <span class="font-bold">It's not ready yet</span>, but you can have a look <a class="underline hover:no-underline hover:text-indigo-900" href="https://rhythm.cafe">here</a>.</li>
             </ul>
           </div>
 
