--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
       <meta http-equiv="refresh" content="0; url=https://rhythm.cafe" />
+      <meta name="google-site-verification" content="1WyPQLlUkjPptyPrQ6S-l4LxlSKxtbVKY4EiQBQ1H6E" />
       <title>Permanent Redirect</title>
   </head>
   <body>
